# clippi

./: .gitignore  Cargo.toml  LICENSE  README.md
assets/fonts/: iconfont.css
src/: app.rs  blacklist.rs  clipboard.rs  db.rs  focus.rs  history.rs  hotkey.rs  main.rs  paste.rs  settings.rs  tray.rs  types.rs
ui/: ClipboardList.slint  SettingsPanel.slint  app.slint  types.slint
